--- a/my-app/index.html
+++ b/my-app/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>React</title>
-<meta charset="UTF-8"
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>this is the first header</h1>
+<div class="firstHeader"> this is the first header </div>
 <p>this is the paragraph</p>
 </body>
 </html>
